# echo-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  agent  chat  cleanup_plan.md  config.yaml  docker-compose.yml  flake.nix  mkdocs.yml  pyproject.toml  pyrightconfig.json  rename_ai.py  requirements-dev.txt  requirements.txt  run-mac.sh  run.bat  run.ps1  run.sh  security-remediation-plan.md  test_stream.py
.agent_sessions/: 20260226_210508.json  20260226_210526.json  test_session.json
.github/workflows/: ci.yml  lint.yml  release.yml  security.yml  test-multiple.yml  test.yml  tests.yml  typecheck.yml
.opencode/agents/: AGENTS.md  problem-solver.md
.planning/: PROJECT.md  config.json  fastapi_ui_plan.md  web_ui_plan.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: FASTHTML_PLAN.md  MIGRATION_PLAN_NICEGUI.md  PERFORMANCE.md  PROJECT_REVIEW.md  RUNBOOK.md  SECURITY.md  WEB_UI_REVIEW.md  api_reference.md  chat_mode.md  development.md  encryption-audit.md  getting_started.md  index.md  safety_and_compatibility.md
frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ApprovalDialog.tsx  ChangePasswordDialog.tsx  ChatInput.tsx  DebugPanel.tsx  Header.tsx  MessageList.tsx  SetupScreen.tsx  Sidebar.tsx  UnlockScreen.tsx  index.ts
frontend/src/context/: ChatContext.ts  ChatProvider.tsx  index.ts  useChat.ts
frontend/src/test/: api.test.ts  chat.test.tsx  components.test.tsx
frontend/src/types/: index.ts
frontend/src/utils/: thinkBlockParser.ts
scripts/: migrate-paths.sh  migrate_encrypt_existing_sessions.py  run_api.py  run_eval.py  run_tui.py  run_web.py
scripts/benchmarks/: basic_benchmark.py
site/: 404.html  index.html  objects.inv
site/PROJECT_REVIEW/: index.html
site/api_reference/: index.html
site/chat_mode/: index.html
site/development/: index.html
site/getting_started/: index.html
site/safety_and_compatibility/: index.html
site/search/: search_index.json
src/agentframework/: __init__.py  agent.py  api.py  bootstrap.py  callbacks.py  chat.py  chat_commands.py  chat_render.py  chat_runtime.py  circuit_breaker.py  cli.py  client.py  config.py  constants.py  conversation.py  db_crypto.py  dependencies.py  logging_utils.py  memory.py  metrics.py  otel.py  rate_limit.py  router.py  safety.py  sentry.py  session.py  session_runtime.py  tool_runtime.py  tui.py  vector.py  web_api.py  web_models.py  web_ui.py  web_utils.py  workflow.py
src/agentframework/core/: __init__.py  agent.py  callbacks.py  memory.py  router.py  session_runtime.py  tool_runtime.py
src/agentframework/providers/: __init__.py  anthropic.py  lm_studio.py  ollama.py  openai.py
src/agentframework/routers/: chat.py  health.py  models.py  sessions.py  unlock.py  workflows.py
src/agentframework/tools/: __init__.py  api.py  bash.py  db.py  deep_search.py  delegate.py  file.py  git.py  human.py  humanizer.py  memory.py  notes.py  python.py  rag.py  search.py  web.py
src/agentframework/tools/search_providers/: __init__.py  base.py  brave.py  duckduckgo.py  tavily.py
src/agentframework/ui/: __init__.py  app.py  backend.py  components.py  config.py  markdown.py  state.py  theme.py
src/agentframework/ui/components/: chat_input.py  markdown.py  message.py  sidebar.py
src/agentframework/ui_nicegui/: app.py  backend.py  state.py  theme.py
src/agentframework/ui_nicegui/components/: __init__.py  chat_container.py  chat_input.py  message.py  sidebar.py
src/workflows/: __init__.py  _agent_utils.py  blog_post_creator.py  code_reviewer.py  data_extractor.py  debate_simulator.py  newsletter_generator.py  research_and_summarize.py
static/: index.html  workflows.html
static/css/: style.css
static/js/: app.js  main.js  state.js  workflows.js
static/js/components/: ui.js
static/js/services/: api.js  websocket.js
tests/: __init__.py  conftest.py  test_agent.py  test_agent_e2e.py  test_agent_extended.py  test_anthropic_provider_extended.py  test_api_lifespan.py  test_api_streaming.py  test_api_tool.py  test_bash_tool_extended.py  test_boilerplate_extended.py  test_bootstrap_otel.py  test_callbacks.py  test_change_password.py  test_circuit_breaker.py  test_cli.py  test_cli_config.py  test_complex_tools.py  test_concurrency.py  test_config.py  test_conversation_edge_cases.py  test_db_crypto.py  test_db_tool.py  test_delegate_tool.py  test_dependencies.py  test_entrypoint_config_consistency.py  test_extraction.py  test_file_extended.py  test_git.py  test_human_tool.py  test_integration.py  test_integration_agent_flow.py  test_legacy_chat_extended.py  test_memory.py  test_message_filtering.py  test_metrics.py  test_ollama_provider_extended.py  test_openai_provider_extended.py  test_otel_extended.py  test_providers.py  (+20 more)
tests/eval/: dataset.json  evaluator.py
