[project]
name = "agentframework"
version = "0.1.0"
description = "A standalone AI agent framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "ddgs>=9.0.0",
    "markdownify>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "prompt_toolkit>=3.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.0.0",
    "chromadb>=0.5.0",
    "textual>=8.0.2",
    "streamlit>=1.55.0",
    "instructor>=1.14.5",
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "crawl4ai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.28.0",
    "mkdocstrings-python>=1.16.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "ruff>=0.3.0",
    "pyright>=1.1.300",
    "respx>=0.21.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
agent = "agentframework.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentframework"]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark tests as asynchronous",
]
