[project]
name = "agentframework"
version = "0.1.0"
description = "A standalone AI agent framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tavily-python>=0.7.0",
    "markdownify>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "prompt_toolkit>=3.0.0",
    "aiohttp>=3.14.1",
    "starlette>=1.3.1",
    "pydantic>=2.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.0.0",
    "instructor>=1.14.5",
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "urllib3>=2.6.3",
    "charset-normalizer<3.4.0",
    "chardet<6.0.0",
    "markdown>=3.7",
    "websockets>=12.0",
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=0.4.0",
    "duckduckgo-search>=8.1.1",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
ui = [
    "textual>=8.0.2",
]
vector-db = [
    "chromadb>=0.5.0",
]
web-scraping = [
    "crawl4ai>=0.9.0",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-httpx==0.36.0",
    "pytest-timeout>=2.3.0",
    "respx==0.22.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "httpx2>=0.2.0",
]
otel = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
]
all = [
    "textual>=8.0.2",
    "chromadb>=0.5.0",
    "crawl4ai>=0.9.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-httpx==0.36.0",
    "pytest-timeout>=2.3.0",
    "respx==0.22.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
agent = "agentframework.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentframework"]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark tests as asynchronous",
]
timeout = 30
timeout_method = "thread"


[tool.pyright]
include = ["src/agentframework"]
exclude = ["src/agentframework/ui_deprecated"]
reportMissingModuleSource = false

[tool.uv]
override-dependencies = [
    "lxml>=6.1.0",
    "msgpack>=1.2.1",
    "cryptography>=48.0.1",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.19",
]
